# final-dream-app

./: .gitignore  README.md  pyproject.toml
app/: main.py
backend/dreamcatcher/: artifacts.py  pipeline.py  preprocess.py
backend/scripts/: name_clusters.py  train.py
dreamcatcher/: __init__.py  pipeline.py  preprocess.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/analyze/: page.tsx
frontend/app/api/analyze/: route.ts
frontend/app/api/plot-data-3d/: route.ts
scripts/: train.py
